--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,7 @@
 .score-table {
    width: 100%;
    border-collapse: separate;
-   border-spacing: 0 2;
+   border-spacing: 3px 1px;
    background: #f8f9fa;
    border-radius: 15px;
 }
